# rust-person-viewer

./: .env  Cargo.toml  config.toml
src/: main.rs
