[package]
name = "rust-person-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
opencv = { version = "0.98.1", default-features = false, features = ["videoio", "imgproc", "imgcodecs"] }
ndarray = "0.17.2"
dotenvy = "0.15"
anyhow = "1.0"
chrono = "0.4"
